@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.klinker.android.twitter"
 
-          android:versionCode="56"
-          android:versionName="1.4.4" >
+          android:versionCode="57"
+          android:versionName="2.0.0" >
 
     <uses-sdk
             android:minSdkVersion="14"
